--- a/src/app/heroes/page/list-page/list-page.component.html
+++ b/src/app/heroes/page/list-page/list-page.component.html
@@ -1,1 +1,14 @@
-<p>list-page works!</p>
+<div>
+  <ul>
+    <li *ngFor="let heroes of heroes">{{ heroes.superhero  }}</li>
+  </ul>
+</div>
+
+<!-- <div class="wrapper">
+	<div class="card" style="width: auto;"   *ngFor="let item of heroes">
+		<img class="card-img-top" src="https://via.placeholder.com/350x150" alt="Card image cap">
+		<div class="card-body">
+			<h5 class="card-title"> {{ item.alter_ego}}</h5>
+		</div>
+	</div>
+</div> -->
