--- a/src/app/heroes/page/new-page/new-page.component.html
+++ b/src/app/heroes/page/new-page/new-page.component.html
@@ -1,1 +1,60 @@
-<p>new-page works!</p>
+<h1>
+  Editas / Agregar Heroe
+  <small>Superman</small>
+</h1>
+
+<mat-divider class="mb-2"></mat-divider>
+
+<div class="grid">
+  <div class="col-12 sm:col-6">
+    <mat-card>
+      <mat-card-content>
+        <div class="grid">
+          <mat-form-field class="col-12 sm:col-6">
+            <mat-label>Super Heroe</mat-label>
+            <input matInput type="text" required />
+          </mat-form-field>
+
+          <mat-form-field class="col-12 sm:col-6">
+            <mat-label>Alter ego</mat-label>
+            <input matInput type="text" required />
+          </mat-form-field>
+
+          <mat-form-field class="col-12 sm:col-6">
+            <mat-label> Primera Aparicion </mat-label>
+            <input matInput type="text" required />
+          </mat-form-field>
+
+          <mat-form-field class="col-12 sm:col-6">
+            <mat-label> Personajes</mat-label>
+            <input matInput type="text" required />
+          </mat-form-field>
+
+          <mat-form-field class="col-12 sm:col-6">
+            <mat-label> creador</mat-label>
+            <mat-select required="">
+              <mat-option *ngFor="let publisher of publishers"
+              [value]="publisher.id"
+              >
+              {{publisher.desc}}
+              </mat-option>
+            </mat-select>
+            <input matInput type="text" required />
+          </mat-form-field>
+        </div>
+
+        <div class="flex justify-content-between">
+
+
+        <button mat-flat-button color="warn">Borrar</button>
+
+        <button mat-flat-button color="primary">Save</button>
+        </div>
+
+
+      </mat-card-content>
+    </mat-card>
+  </div>
+
+  <div class="col-12 sm:col-6"></div>
+</div>
