--- a/src/app/heroes/page/new-page/new-page.component.html
+++ b/src/app/heroes/page/new-page/new-page.component.html
@@ -1,6 +1,5 @@
 <h1>
   Editas / Agregar Heroe
-  <small>Superman</small>
 </h1>
 
 <mat-divider class="mb-2"></mat-divider>
@@ -56,5 +55,11 @@
     </mat-card>
   </div>
 
-  <div class="col-12 sm:col-6"></div>
+  <div class="col-12 sm:col-6">
+
+    <mat-card>
+      <img mat-card-image src="" alt="imagen del heroe">
+    </mat-card>
+
+  </div>
 </div>
